Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23986

Qt Assistant crashes when you close the last open tab

XMLWordPrintable

    • 053baa018fa6ffe663c646246b8ba2253327cbd6 (4.8) 07543b7db5912e3c1b0cf424bccf212d0d100039 (5.0)

      Steps to reproduce:
      1) start Qt Assistant
      2) choose File->Close Tab

      The reason for the crash was the wrong usage of Q_ASSERT in the %qtdir%/assistant/tools/assistant/tools/openpagesmanager.cpp in the function void OpenPagesManager::closeCurrentPage(). The attached patch corrects this bug.

        For Gerrit Dashboard: QTBUG-23986
        # Subject Branch Project Status CR V

            heimrich Karsten Heimrich
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes