Fix Assistant crash when closing last tab.

Disable 'Close Tab' action from 'File' menu for last tab to avoid
crash. Context menu 'close' actions in "open pages" widget, are already
disabled under same conditions.

Manually cherry-picked from Qt5:
Change I7f285f45: Fix Assistant crash when closing last tab

Task-number: QTBUG-23986

Change-Id: I0176451c80f0d25e82c7cd4fb2076c23c9d50128
Reviewed-by: Janne Anttila <janne.anttila@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@nokia.com>
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>